@@ -4,6 +4,7 @@ xine-lib (1.1.2)
   * Also look for Xv support in /usr/lib for X.org's new location
   * Fix using xine-lib on systems with SELinux enabled
   * Build right with libiconv in /usr/local as default on FreeBSD
+  * Fix a potential crash with fixed-size lacing in the Matroska demuxer
 
 xine-lib (1.1.1)
   * Improve sound quality when using alsa 1.0.9 or above.
